@startuml

title __FOOGLE's Class Diagram__\n

  package com.foogle {
    class Main {
    }
  }
  

  package com.foogle {
    class article {
    }
  }
  

  package com.foogle {
    class bmPatternMatch {
    }
  }
  

  package com.foogle {
    class fileHandler {
    }
  }
  

  package com.foogle {
    class patternmatch {
    }
  }
  

  article o-- fileHandler : file
  patternmatch -up-|> Runnable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
